--- a/meta.html
+++ b/meta.html
@@ -1,7 +1,7 @@
 <!-- Primary Meta Tags -->
 <title>Tales Gomes - a data science blog</title>
 <meta name="title" content="Tales Gomes - a data science blog">
-<meta name="description" content="Welcome to my blog! A blog about Data Science, Curiosities, Learning and Technology.">
+<meta name="description" content="Welcome to my blog! A blog about data science, learning and technology.">
 <meta name="image" content="https://blog-talesgomes.netlify.app/statics/social.jpg">
 
 
@@ -9,12 +9,12 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://blog-talesgomes.netlify.app/">
 <meta property="og:title" content="Tales Gomes - a data science blog">
-<meta property="og:description" content="Welcome to my blog! A blog about Data Science, Curiosities, Learning and Technology.">
+<meta property="og:description" content="Welcome to my blog! A blog about data science, learning and technology.">
 <meta property="og:image" content="https://blog-talesgomes.netlify.app/statics/social.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://blog-talesgomes.netlify.app/">
 <meta property="twitter:title" content="Tales Gomes - a data science blog">
-<meta property="twitter:description" content="Welcome to my blog! A blog about Data Science, Curiosities, Learning and Technology.">
+<meta property="twitter:description" content="Welcome to my blog! A blog about data science, learning and technology.">
 <meta property="twitter:image" content="https://blog-talesgomes.netlify.app/statics/social.jpg">
