--- a/meta.html
+++ b/meta.html
@@ -2,7 +2,7 @@
 <title>Tales Gomes - a data science blog</title>
 <meta name="title" content="Tales Gomes - a data science blog">
 <meta name="description" content="Welcome to my blog! A blog about data science, learning and technology.">
-<meta name="image" content="https://blog-talesgomes.netlify.app/statics/social.jpg">
+<meta name="image" content="https://blog-talesgomes.netlify.app/social.jpg">
 
 
 <!-- Open Graph / Facebook -->
@@ -10,11 +10,11 @@
 <meta property="og:url" content="https://blog-talesgomes.netlify.app/">
 <meta property="og:title" content="Tales Gomes - a data science blog">
 <meta property="og:description" content="Welcome to my blog! A blog about data science, learning and technology.">
-<meta property="og:image" content="https://blog-talesgomes.netlify.app/statics/social.jpg">
+<meta property="og:image" content="https://blog-talesgomes.netlify.app/social.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://blog-talesgomes.netlify.app/">
 <meta property="twitter:title" content="Tales Gomes - a data science blog">
 <meta property="twitter:description" content="Welcome to my blog! A blog about data science, learning and technology.">
-<meta property="twitter:image" content="https://blog-talesgomes.netlify.app/statics/social.jpg">
+<meta property="twitter:image" content="https://blog-talesgomes.netlify.app/social.jpg">
