--- a/meta.html
+++ b/meta.html
@@ -1,20 +1,18 @@
 <!-- Primary Meta Tags -->
-<title>Tales Gomes - a data science blog</title>
-<meta name="title" content="Tales Gomes - a data science blog">
-<meta name="description" content="Welcome to my blog! A blog about data science, learning and technology.">
-<meta name="image" content="https://blog-talesgomes.netlify.app/social.jpg">
-
+<title>Yet Another Data Blog</title>
+<meta name="title" content="Yet Another Data Blog">
+<meta name="description" content="A blog about data science, learning and technology by Tales Gomes">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://blog-talesgomes.netlify.app/">
-<meta property="og:title" content="Tales Gomes - a data science blog">
-<meta property="og:description" content="Welcome to my blog! A blog about data science, learning and technology.">
+<meta property="og:title" content="Yet Another Data Blog">
+<meta property="og:description" content="A blog about data science, learning and technology by Tales Gomes">
 <meta property="og:image" content="https://blog-talesgomes.netlify.app/social.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://blog-talesgomes.netlify.app/">
-<meta property="twitter:title" content="Tales Gomes - a data science blog">
-<meta property="twitter:description" content="Welcome to my blog! A blog about data science, learning and technology.">
+<meta property="twitter:title" content="Yet Another Data Blog">
+<meta property="twitter:description" content="A blog about data science, learning and technology by Tales Gomes">
 <meta property="twitter:image" content="https://blog-talesgomes.netlify.app/social.jpg">
