--- a/meta.html
+++ b/meta.html
@@ -1,7 +1,10 @@
 <!-- Primary Meta Tags -->
 <title>Yet Another Data Blog</title>
-<meta name="title" content="Yet Another Data Blog">
-<meta name="description" content="A blog about data science, learning and technology by Tales Gomes">
+<meta name="title" property="og:title" content="Yet Another Data Blog">
+<meta name="description" property="og:description" content="A blog about data science, learning and technology by Tales Gomes">
+<meta name="image" property="og:image" content="https://blog-talesgomes.netlify.app/social.jpg">
+<meta name="author" content="Tales Gomes">
+
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
@@ -9,7 +12,6 @@
 <meta property="og:title" content="Yet Another Data Blog">
 <meta property="og:description" content="A blog about data science, learning and technology by Tales Gomes">
 <meta property="og:image" content="https://blog-talesgomes.netlify.app/social.jpg">
-
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://blog-talesgomes.netlify.app/">
