--- a/meta.html
+++ b/meta.html
@@ -1,11 +1,13 @@
+
 <!-- Primary Meta Tags -->
 <title>Yet Another Data Blog</title>
+<head prefix="og: http://ogp.me/ns#"></head>
 <meta name="title" property="og:title" content="Yet Another Data Blog">
 <meta name="description" property="og:description" content="A blog about data science, learning and technology by Tales Gomes">
 <meta name="image" property="og:image" content="https://blog-talesgomes.netlify.app/social.jpg">
 <meta name="author" content="Tales Gomes">
 
-
+    
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://blog-talesgomes.netlify.app/">
