--- a/meta.html
+++ b/meta.html
@@ -2,10 +2,8 @@
 <!-- Primary Meta Tags -->
 <title>Yet Another Data Blog</title>
 <head prefix="og: http://ogp.me/ns#"></head>
-<meta name="title" property="og:title" content="Yet Another Data Blog">
-<meta name="description" property="og:description" content="A blog about data science, learning and technology by Tales Gomes">
-<meta name="image" property="og:image" content="https://blog-talesgomes.netlify.app/social.jpg">
-<meta name="author" content="Tales Gomes">
+<meta name="title" content="Yet Another Data Blog">
+<meta name="description" content="A blog about data science, learning and technology by Tales Gomes">
 
     
 <!-- Open Graph / Facebook -->
@@ -20,3 +18,9 @@
 <meta property="twitter:title" content="Yet Another Data Blog">
 <meta property="twitter:description" content="A blog about data science, learning and technology by Tales Gomes">
 <meta property="twitter:image" content="https://blog-talesgomes.netlify.app/social.jpg">
+<!-- Linkedin -->
+<meta name="title" property="og:title" content="Yet Another Data Blog">
+<meta property="og:type" content="website">
+<meta name="image" property="og:image" content="https://blog-talesgomes.netlify.app/social.jpg">
+<meta name="description" property="og:description" content="A blog about data science, learning and technology by Tales Gomes">
+<meta name="author" content="Tales Gomes">
