--- a/meta.html
+++ b/meta.html
@@ -8,13 +8,13 @@
     
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://blog-talesgomes.netlify.app/index.html">
+<meta property="og:url" content="https://blog-talesgomes.netlify.app">
 <meta property="og:title" content="Yet Another Data Blog">
 <meta property="og:description" content="A blog about data science, learning and technology by Tales Gomes">
 <meta property="og:image" content="https://blog-talesgomes.netlify.app/social.jpg">
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://blog-talesgomes.netlify.app/index.html">
+<meta property="twitter:url" content="https://blog-talesgomes.netlify.app">
 <meta property="twitter:title" content="Yet Another Data Blog">
 <meta property="twitter:description" content="A blog about data science, learning and technology by Tales Gomes">
 <meta property="twitter:image" content="https://blog-talesgomes.netlify.app/social.jpg">
